Update PhotoServiceImpl.java